refactor(pageUI): implement Page UI